Se agregaron algunos componentes

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap-icons/font/bootstrap-icons.css"
+.grid-div
+    display: grid
+    grid-template-columns: repeat(auto-fit,minmax(300px, 1fr))
+    grid-template-rows: repeat(auto-fill,minmax(200px, 1fr))
+
+
