--- a/src/app/layout/component/pagina-no-disponible/pagina-no-disponible.component.html
+++ b/src/app/layout/component/pagina-no-disponible/pagina-no-disponible.component.html
@@ -1,1 +1,50 @@
-<p>pagina-no-disponible works!</p>
+
+
+<div class="row">
+    <div class="col-12">
+        <div class="row">
+            <div class="col-4">
+                <div class="card">
+                    <div class="card-header text-center">
+                        <strong class="card-title ">
+                            Login
+                    </strong>
+                </div>
+                <div class="card-body">
+                    <form>
+                        <div class="row">
+                            <div class="col-12">
+                                <div class="form-group">
+                                    <label for="usuario">Usuario</label>
+                                    <input type="text" class="form-control" placeholder="Ingrese su usuario">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12">
+                                <div class="form-group">
+                                    <label for="usuario">Contrasena</label>
+                                    <input type="password" class="form-control" placeholder="Ingrese su Contrasena">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row p-2">
+                            <div class="col-12 d-flex justify-content-center">
+                               <button class="btn btn-success">
+                                INICIAR SESION
+                               </button>
+                            </div>
+                        </div>
+
+
+                    </form>
+                </div>
+                </div>
+            </div>
+            <div class="col-6">
+
+            </div>
+        </div>
+    </div>
+</div>
